use-case3-mod-req-headers/demo/whatigot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whatigot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whatigot
  template:
    metadata:
      labels:
        app: whatigot
    spec:
      containers:
      - name: whatigot
        image: nginx
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx
          readOnly: true
      volumes:
      - name: config-volume
        configMap:
          name: whatigot-config
---
apiVersion: v1
kind: Service
metadata:
  name: whatigot
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: whatigot
